fixed horizontal scroll issue

--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -25,32 +25,32 @@ nav{
 /* for paragraph */
 /* @media(min-width: 768px){
     p{
-        font-size: 2rem;
+        font-size: 1rem;
     }
 }
 @media(max-width: 768px){
     p{
-        font-size: 1.2rem;
+        font-size: 0.8rem;
     }
 }
 @media(max-width: 576px){
     p{
-        font-size: 1.1rem;
+        font-size: 0.6rem;
     }
 }
 @media(max-width: 480px){
     p{
-        font-size: 1rem;
+        font-size: 0.5rem;
     }
 }
 @media(max-width: 360px){
     p{
-        font-size: 0.9rem;
+        font-size: 0.4rem;
     }
-}
+} */
 
 /* for icons */
-@media(min-width: 768px){
+/* @media(min-width: 768px){
     i{
         font-size: 2.5rem;
     }
@@ -74,10 +74,10 @@ nav{
     i{
         font-size: 0.9rem;
     }
-}
+} */
 
 /* for h1 */
-@media(min-width: 768px){
+/* @media(min-width: 768px){
     h1{
         font-size: 3rem;
     }
@@ -101,10 +101,10 @@ nav{
     h1{
         font-size: 1.1rem;
     }
-}
+} */
 
 /* for h2 */
-@media(min-width: 768px){
+/* @media(min-width: 768px){
     h2{
         font-size: 2.0rem !important;
     }
@@ -128,5 +128,4 @@ nav{
     h2{
         font-size: 0.9rem !important;
     }
-} 
- */
+}  */
